--- a/WashWashes/app/src/main/res/layout/washer.xml
+++ b/WashWashes/app/src/main/res/layout/washer.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
         app:menu="@menu/bottom_nav_menu"
-        app:itemBackground="@color/white"
+        app:itemBackground="@color/colorPrimary"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"/>
 
     <ScrollView
@@ -37,7 +39,7 @@
                 android:rowCount="10">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine1"
+                    android:id="@+id/washer1"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -64,7 +66,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_1"
+                            android:text="@string/washer1"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -72,7 +74,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine2"
+                    android:id="@+id/washer2"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -99,7 +101,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_2"
+                            android:text="@string/washer2"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -107,7 +109,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine3"
+                    android:id="@+id/washer3"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -134,7 +136,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_3"
+                            android:text="@string/washer3"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -142,7 +144,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine4"
+                    android:id="@+id/washer4"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -169,7 +171,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_4"
+                            android:text="@string/washer4"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -177,7 +179,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine5"
+                    android:id="@+id/washer5"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -204,7 +206,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_5"
+                            android:text="@string/washer5"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -212,7 +214,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine6"
+                    android:id="@+id/washer6"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -239,7 +241,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_6"
+                            android:text="@string/washer6"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -247,7 +249,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine7"
+                    android:id="@+id/washer7"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -274,7 +276,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_7"
+                            android:text="@string/washer7"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -282,7 +284,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine8"
+                    android:id="@+id/washer8"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -309,7 +311,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_8"
+                            android:text="@string/washer8"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -317,7 +319,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine9"
+                    android:id="@+id/washer9"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -344,7 +346,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_9"
+                            android:text="@string/washer9"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -352,7 +354,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine10"
+                    android:id="@+id/washer10"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -379,7 +381,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_10"
+                            android:text="@string/washer10"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -387,7 +389,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine11"
+                    android:id="@+id/washer11"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -414,7 +416,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_11"
+                            android:text="@string/washer11"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -422,11 +424,12 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/machine12"
+                    android:id="@+id/washer12"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
                     android:layout_marginLeft="25dp"
+                    android:layout_marginBottom="50dp"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="8dp">
 
@@ -449,7 +452,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="@string/machine_12"
+                            android:text="@string/washer12"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
