--- a/WashWashes/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/WashWashes/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.norman_lee.myapplication.MainActivity">
+    tools:context="com.example.norman_lee.myapplication.Washer">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/home"
+        android:icon="@drawable/ic_machine"
+        android:title="@string/home" />
+
+    <item
+        android:id="@+id/washer"
+        android:icon="@drawable/ic_machine"
+        android:title="@string/washer" />
+
+    <item
+        android:id="@+id/dryer"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/dryer" />
 
 </menu>
