--- a/WashWashes/app/src/main/res/layout/activity_main.xml
+++ b/WashWashes/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -46,21 +47,21 @@
         android:id="@+id/block55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/button55"
-        android:paddingLeft="60sp"
-        android:paddingTop="20dp"
-        android:paddingRight="60sp"
-        android:paddingBottom="20dp"
         android:text="@string/block_55"
-        android:textSize="40sp" />
+        android:textSize="40dp"
+        android:paddingLeft="60sp"
+        android:paddingRight="60sp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/button55"/>
 
     <Button
         android:id="@+id/block57"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/block_57"
-        android:textSize="40sp"
+        android:textSize="40dp"
         android:paddingLeft="60sp"
         android:paddingRight="60sp"
         android:paddingTop="20dp"
@@ -73,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/block_59"
-        android:textSize="40sp"
+        android:textSize="40dp"
         android:paddingLeft="60sp"
         android:paddingRight="60sp"
         android:paddingTop="20dp"
